--- a/example_code_1.ipynb
+++ b/example_code_1.ipynb
@@ -51,11 +51,11 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt               # matplotlib.pylot은 다양한 plot을 그리기 위한 라이브러리 #\n",
+        "import matplotlib.pyplot as plt               # matplotlib.pylot은 다양한 plot을 그리기 위한 라이브러리 \n",
         "from sklearn.datasets import load_iris\n",
-        "import pandas as pd        # pandas는 csv 파일을 불러오기 위한 라이브러리 #\n",
+        "import pandas as pd        # pandas는 csv 파일을 불러오기 위한 라이브러리 \n",
         "import pydotplus\n",
-        "import seaborn as sns      # seaborn 라이브러리에서도 plot을 그릴 수 있음 #"
+        "import seaborn as sns      # seaborn 라이브러리에서도 plot을 그릴 수 있음 "
       ],
       "metadata": {
         "id": "SI3iAV2iR-Ai"
@@ -77,7 +77,7 @@
     {
       "cell_type": "code",
       "source": [
-        "data = sns.load_dataset('diamonds')   # seaborn 라이브러리에 저장된 예제 데이터인 'tip' 데이터를 불러오는 코드 #\n",
+        "data = sns.load_dataset('diamonds')   # seaborn 라이브러리에 저장된 예제 데이터인 'tip' 데이터를 불러오는 코드 \n",
         "data.shape\n",
         "data.head()   # 데이터가 제대로 불려졌는지 확인하는 코드 #"
       ],
@@ -90,14 +90,24 @@
     {
       "cell_type": "code",
       "source": [
-        "#from google.colab import drive    ### colab에서 데이터를 불러오기 위한 코드 ###\n",
-        "#drive.mount('/content/drive')        ### colab에서 데이터를 불러오는 라이브러리: drive   /   데이터가 저장된 폴더:  /content/drive'  ###\n",
-        "#filename = '/content/drive/My Drive/ToyotaCorolla.csv'      ### urban.csv라는 데이터가 저장된 경로를 filename에 저장 ###\n",
-        "#data = pd.read_csv(filename)     ### filename에 저장된 urban.csv를 data1에 저장 ###\n",
-        "#data.head()        "
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
       ],
       "metadata": {
-        "id": "LRDlgkyBcTbw"
+        "id": "cAZZ_FSWhmZt"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filename = '/content/drive/MyDrive/Colab Notebooks/WinterVacation/ToyotaCorolla.csv'      ### urban.csv라는 데이터가 저장된 경로를 filename에 저장 ###\n",
+        "data = pd.read_csv(filename)     ### filename에 저장된 urban.csv를 data1에 저장 ###\n",
+        "data.head()  "
+      ],
+      "metadata": {
+        "id": "C9wPqQbYhsG-"
       },
       "execution_count": null,
       "outputs": []
@@ -106,7 +116,7 @@
       "cell_type": "code",
       "source": [
         "# 히스토그램 그리기 #\n",
-        "sns.histplot(data=data, x=\"price\")"
+        "sns.histplot(data=data, x=\"Age_08_04\")"
       ],
       "metadata": {
         "id": "xcSCMx2QWgVZ"
@@ -117,7 +127,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.histplot(data=data, x=\"price\", bins = 10)  # x축을 10개 구간으로 구분"
+        "sns.histplot(data=data, x=\"Age_08_04\", bins = 100)  # x축을 10개 구간으로 구분"
       ],
       "metadata": {
         "id": "15snINj8XMVv"
@@ -128,7 +138,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.histplot(data=data, x=\"price\", bins = 20, kde = 'true')  # x축을 20개 구간으로 구분하고, 확퓰분포 함수 모양 추정"
+        "sns.histplot(data=data, x=\"Age_08_04\", bins = 20, kde = 'true')  # x축을 20개 구간으로 구분하고, 확퓰분포 함수 모양 추정"
       ],
       "metadata": {
         "id": "d4IiPSUAXaLZ"
@@ -140,7 +150,7 @@
       "cell_type": "code",
       "source": [
         "# Box plot에 plot 그리기 #\n",
-        "plt.boxplot(data['price'])\n",
+        "plt.boxplot(data['Age_08_04'])\n",
         "plt.show()"
       ],
       "metadata": {
@@ -153,9 +163,9 @@
       "cell_type": "code",
       "source": [
         "# Box plot에 plot 제목과 x 축 이름 넣기, 이상 값들은 파란색 원으로 표시 #\n",
-        "plt.boxplot(data['price'], sym=\"bo\")\n",
-        "plt.title('Box plot of price')\n",
-        "plt.xticks([1], ['price'])\n",
+        "plt.boxplot(data['Weight'], sym=\"bo\")\n",
+        "plt.title('Box plot of Age_08_04')\n",
+        "plt.xticks([1], ['Weight'])\n",
         "plt.show()"
       ],
       "metadata": {
@@ -169,9 +179,9 @@
       "source": [
         "# 한번에 여러개의 box plot #\n",
         "fig, ax = plt.subplots()\n",
-        "ax.boxplot([data['depth'], data['table']], sym=\"b*\")\n",
-        "plt.title('Multiple box plots of diamonds on one Axes')\n",
-        "plt.xticks([1, 2], ['depth', 'table'])\n",
+        "ax.boxplot([data['Age_08_04'], data['Doors']], sym=\"b*\")\n",
+        "plt.title('Multiple box plots')\n",
+        "plt.xticks([1, 2], ['Age_08_04', 'Doors'])\n",
         "plt.show()"
       ],
       "metadata": {
@@ -182,17 +192,8 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "CVOQBugLT22B"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "source": [
-        "sns.boxplot(x=\"color\", y=\"price\", data=data)\n",
+        "sns.boxplot(x=\"KM\", y=\"Price\", data=data)\n",
         "plt.show()"
       ],
       "metadata": {
@@ -204,7 +205,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.scatterplot(x = \"carat\", y = \"price\", data = data)"
+        "sns.scatterplot(x = \"KM\", y = \"Price\", data = data)"
       ],
       "metadata": {
         "id": "9vPd4RnublqK"
@@ -215,7 +216,7 @@
     {
       "cell_type": "code",
       "source": [
-        "sns.relplot(x=\"carat\", y=\"price\", col=\"cut\",hue = \"color\", style = \"clarity\", data=data)"
+        "sns.relplot(x=\"cc\", y=\"Weight\", col=\"HP\",hue = \"Doors\", style = \"Age_08_04\", data=data)"
       ],
       "metadata": {
         "id": "dYLAC6KlTe3f"
