--- a/example_code_3.ipynb
+++ b/example_code_3.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "private_outputs": true,
       "provenance": [],
+      "toc_visible": true,
       "include_colab_link": true
     },
     "kernelspec": {
@@ -46,8 +47,18 @@
       "cell_type": "code",
       "source": [
         "from google.colab import drive    ### colab에서 데이터를 불러오기 위한 코드 ###\n",
-        "drive.mount('/content/drive')        ### colab에서 데이터를 불러오는 라이브러리: drive   /   데이터가 저장된 폴더:  /content/drive'  ###\n",
-        "filename = '/content/drive/My Drive/wdbc2.csv'      ### ToyotaCorolla.csv라는 데이터가 저장된 경로를 filename에 저장 ###\n",
+        "drive.mount('/content/drive') "
+      ],
+      "metadata": {
+        "id": "I-t46cyUKb5u"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "filename = '/content/drive/MyDrive/Colab Notebooks/WinterVacation/heart.csv'      ### ToyotaCorolla.csv라는 데이터가 저장된 경로를 filename에 저장 ###\n",
         "data = pd.read_csv(filename)     ### filename에 저장된 urban.csv를 data1에 저장 ###\n",
         "data.head()"
       ],
@@ -84,8 +95,8 @@
       "cell_type": "code",
       "source": [
         "data_logistic = np.array(data)    # statsmodel의 함수를 쓰기 위해서는 데이터의 구조가 array 형태여야 함\n",
-        "X = np.array(data_logistic[:,np.arange(0,9)])\n",
-        "y = np.array(data_logistic[:,9])"
+        "X = np.array(data_logistic[:,np.arange(0,12)])\n",
+        "y = np.array(data_logistic[:,12])"
       ],
       "metadata": {
         "id": "M-U5--VskJw6"
@@ -120,10 +131,21 @@
       "cell_type": "code",
       "source": [
         "y_logistic = np.zeros((np.shape(X1)[0],1))\n",
-        "y_logistic[y == 'malignant'] = 1          # Class 중 'benign'은 0번 Class로, 'malignant'는 1번 Class 로 설정하는 코드"
+        "y_logistic[y == 'Abnormal'] = 1          # Class 중 'benign'은 0번 Class로, 'malignant'는 1번 Class 로 설정하는 코드"
       ],
       "metadata": {
         "id": "0KfnS3fCkjaR"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(y_logistic)"
+      ],
+      "metadata": {
+        "id": "pfY6fZ6yMU_p"
       },
       "execution_count": null,
       "outputs": []
@@ -170,6 +192,17 @@
     {
       "cell_type": "code",
       "source": [
+        "print(pred)"
+      ],
+      "metadata": {
+        "id": "ArwHX2h1OXtv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "from sklearn.metrics import confusion_matrix\n",
         "confusion_matrix(y_logistic, pred)"
       ],
@@ -191,6 +224,17 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Roc curve : 파란색 직선이 직사각형이 될수록 분류 정확도가 올라간다. 데이터에 따라 최적의 cut-off값이 달라진다. \n",
+        "### Roc auc : 아래 면적의 넓이 \n",
+        "### cut-off 값에 따라 분류가 달라지는데, roc_curve는 그리는 과정에서 cut-off값을 조절하기 때문에 영향을 받지 않는다.바꿔가는 과정이기 떄문에"
+      ],
+      "metadata": {
+        "id": "XV-W3__JQWsA"
+      }
     },
     {
       "cell_type": "code",
@@ -216,7 +260,7 @@
     {
       "cell_type": "code",
       "source": [
-        "pvalues_X = result.pvalues[np.arange(0,9)]\n",
+        "pvalues_X = result.pvalues[np.arange(0,12)]\n",
         "print(pvalues_X)"
       ],
       "metadata": {
@@ -228,7 +272,7 @@
     {
       "cell_type": "code",
       "source": [
-        "X_index = np.arange(0,9)\n",
+        "X_index = np.arange(0,12)\n",
         "valid_X_index = X_index [pvalues_X < 0.05]\n",
         "X_logistic1 = X_logistic[:,valid_X_index]\n",
         "X_logistic1 = sm.add_constant(X_logistic1, prepend=False)"
